--- a/index.html
+++ b/index.html
@@ -74,23 +74,49 @@
   </header>
 
   <section id="home" class="d-flex">
+
     <div class="container align-self-center">
       <div class="row">
         <div class="col-md-12 capa">
 
-          <h1>Músicas para todos</h1>
+          <div id="carouselIdicators" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
 
-          <a href="#" class="btn  btn-custom btn-roxo">
-            Aproveite o Spotfy Free
-          </a>
+              <div class="carousel-item active">
+                <h1>Músicas para todos</h1>
+                <a href="#" class="btn  btn-custom btn-roxo">
+                  Aproveite o Spotfy Free
+                </a>
+                <a href="#" class="btn btn-custom btn-branco">
+                  Obter Spotfy Premium
+                </a>
+              </div>
 
-          <a href="#" class="btn btn-custom btn-branco">
-            Obter Spotfy Premium
-          </a>
+              <div class="carousel-item">
+                <h1>A melhores rádios</h1>
+                <a href="#" class="btn btn-custom btn-branco">
+                  <i class="fa-solid fa-music me-3"></i>Ouça agora
+                </a>
+              </div>
 
+            </div>
+
+            <!--controles-->
+
+            <a href="carouselIdicators" class="carousel-control-prev" data-bs-slide="prev" data-bs-target="#carouselIdicators">
+              <i class="fa-solid fa-angle-left fa-3x"></i>
+            </a>
+
+            <a href="carouselIdicators" class="carousel-control-next" data-bs-slide="next" data-bs-target="#carouselIdicators">
+              <i class="fa-solid fa-angle-right fa-3x"></i>
+            </a>
+            
+          </div>
+          
         </div>
       </div>
     </div>
+
   </section>
 
   <section id="servicos">
